--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ dl {
 }
 
 .st-emotion-cache-z5fcl4 {
+    padding-left: 3rem !important;
+    padding-right: 3rem !important;
+}
+
+.st-emotion-cache-z5fcl4 {
     width: 100%;
     padding: 2rem 2rem 4rem !important;
     min-width: auto;
